--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,11 @@
-nav{
-    background-color: darkblue;
+nav{ 
+    background-color: darkblue; /*this is a example of comment*/
     padding: 10px;
     text-align: center;
+}
+
+h1 {
+    color: darkblue;
 }
 
 main {
@@ -28,17 +32,20 @@ aside {
 }
 
 aside img {
-        width: 300px;
+        width: 200px;
         height: auto;
     }
 
 main img {
     width: 150px;
     height: auto;
-    p {
-        padding: 0;
-    }
+    
 }
+
+p {
+    padding: 2px;
+    }
+
 footer {
     margin-top: 1em;
     border-top: 1px solid black;
