--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,13 @@
 nav{ 
     background-color: darkblue; /*this is a example of comment*/
     padding: 10px;
-    text-align: center;
+    text-align: left;
 }
 
 nav a {
     color: white;
+    padding: 10px;
+
     
 }
 
