--- a/week 02/styles/box-model.css
+++ b/week 02/styles/box-model.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
+body {
+    font-family: Roboto;
+}
+h1 {
+    font-family: 'Rock Salt';
+}
+
 .callout { max-width: 600px;
            margin: 10px 400px;
            border: 1px solid black;
