--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ h1 {
 main {
     max-width: 840px;
     width: 600px;
-    margin: 1rem;
+    margin: 0 auto;
     border: 1px solid rgb(0 0 0/0.2);
     padding: 1rem;
     background-color:#eee;
@@ -19,28 +19,23 @@ main {
     text-align: center;
 }
 
+p{
+    padding: 0
+}
 aside {
     width: 20rem;
-    margin: 1rem;
+    margin: 0 auto;
     border: 1px solid rgb(0 0 0/0.2);
     padding: 1rem;
     background-color:#eee;
     color:#333;
     text-align: center;
     
-
 }
 
-aside img {
+main img {
         width: 200px;
         height: auto;
-    }
-
-main img {
-    width: 200px;
-    height: auto;
-
-    
 }
 
 footer {
