--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,13 @@ nav{
     text-align: center;
 }
 
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 5px;
+    font-size: .9rem;
+}
+
 h1 {
     color: darkblue;
 }   
@@ -18,6 +25,13 @@ main {
     color:#333;
     text-align: center;
 }
+main img{
+    width:200px;     
+    height:auto; 
+    padding:2px; 
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
+}
+
 
 p{
     padding: 0
@@ -33,7 +47,7 @@ aside {
     
 }
 
-main img {
+aside img {
         width: 200px;
         height: auto;
 }
