--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,8 @@ nav a {
     text-decoration: none;
     margin: 5px;
     font-size: .9rem;
+    padding: 1px;
+    display: block;
 }
 
 h1 {
@@ -28,6 +30,7 @@ main {
 main img{
     width:200px;     
     height:auto; 
+    border: #333;
     padding:2px; 
     box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
 }
